<resources>
    <string name="app_name">VerifyMe</string>
    <string name="success_title">Congratulations!</string>
    <string name="success_message">All conditions were successfully met:</string>
    <string name="battery_condition">✔ Battery level matches password</string>
    <string name="wifi_condition">✔ Connected to Wi-Fi</string>
    <string name="light_condition">✔ Light condition met</string>
    <string name="bluetooth_condition">✔ Bluetooth connected</string>
    <string name="temperature_condition">✔ Temperature in acceptable range</string>
    <string name="success_image_description">Success icon indicating all conditions were met</string>
    <string name="success_subtitle">All required successfully completed!</string>
    <string name="success_explanation">Here are the conditions you met successfully:</string>
    <string name="success_icon_description">Success icon indicating completion</string>
    <string name="star_description">Star icon indicating condition status</string>
</resources>